<resources>
    <string name="app_name">U-NITy</string>
    <string name="login_text">Login</string>
    <string name="example_email">example@nitj.ac.in</string>
    <string name="enter_you_password">Enter your password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="login">Already have an account? Login</string>
    <string name="register_text">Register</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_signOut">Sign Out</string>
    <string name="reset">Reset</string>
    <string name="back_to_login">Back to Login</string>
    <string name="mental_health">Mental Health</string>
    <string name="exercise">Exercise</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="post_title">Enter Title</string>
    <string name="post_description">Enter Description</string>
    <string name="add_a_post">Add a Post</string>
    <string name="post">POST</string>
    <string name="what_do_you_want_to_post">What do you want to post</string>
    <string name="nav_feedback">Feedback</string>
    <string name="topic_feedback">Topic i.e Suggestion, Error, etc.</string>
    <string name="nav_counselor">Counsellor</string>
    <string name="anonymous">Anonymous</string>
    <string name="title_select_image">"Select Image "</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="Delete">Delete</string>
    <string name="image_contentDescription">Profile</string>
    <string name="memes">Memes</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
</resources>